# lzo1x-1

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: bench.rs  iai.rs
src/: compress.rs  lib.rs
tests/: test.rs
