[package]
name = "lzo1x-1"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
description = "Safe Rust port of the LZO1X-1 compression algorithm"
repository = "https://github.com/jussyDr/lzo1x-1"
license = "GPL-2.0"
keywords = ["lzo"]
categories = ["compression"]

[[bench]]
name = "bench"
harness = false

[profile.bench]
debug = true

[dev-dependencies]
iai = "0.1.1"

[features]
std = []
default = ["std"]

[package.metadata.docs.rs]
features = ["std"]
